Finished HTML and corrected box alignments in section one.

--- a/style.css
+++ b/style.css
@@ -49,11 +49,13 @@ li {
     padding: 125px 200px;
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 40px;
 }
 
 .section-one {
     flex-basis: 100%;
+    height: 300px;
 }
 
 .section-one.left {
